<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.byethost32.httpindre1234.darbuotoju_sarasas.NewWorkActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Įvesti naują darbuotoją"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="25dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />



        <EditText
            android:id="@+id/new_work_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_work_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />


        <EditText
            android:id="@+id/new_work_socondname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_secondname" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />


        <EditText
            android:id="@+id/new_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_position" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />



             <Button
            android:id="@+id/new_work_entry_button"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_entry_work_button"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite" />




    </android.support.v7.widget.LinearLayoutCompat>


</android.support.constraint.ConstraintLayout>
